# Calculator-Lab

./: Abs.cpp  Abs.h  Add.cpp  Add.h  BinaryIterator.cpp  BinaryIterator.h  CMakeLists.txt  Ceil.cpp  Ceil.h  Decorator.cpp  Decorator.h  Div.cpp  Div.h  Floor.cpp  Floor.h  Iterator.hpp  Mult.cpp  Mult.h  NullIterator.h  Op.cpp  Op.h  Paren.cpp  Paren.h  Pow.cpp  Pow.h  PreorderIterator.cpp  PreorderIterator.h  Sub.cpp  Sub.h  Trunc.cpp  Trunc.h  UnaryIterator.cpp  UnaryIterator.h  base.hpp  main.cpp  test.cpp  visitor.cpp  visitor.h
